--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,75 @@
-fastapi
-uvicorn
-gunicorn
+annotated-types==0.7.0
+anyio==4.9.0
+asgiref==3.8.1
+astroid==3.3.8
+autopep8==2.3.2
+axios==0.4.0
+black==25.1.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+dill==0.3.9
+distlib==0.3.9
+dj-database-url==2.3.0
+Django==5.2
+django-cors-headers==4.7.0
+django-environ==0.12.0
+djangorestframework==3.15.2
+djangorestframework_simplejwt==5.5.0
+dnspython==2.7.0
+fastapi==0.115.12
+filelock==3.17.0
+flake8==7.1.2
+greenlet==3.1.1
+gunicorn==23.0.0
+h11==0.14.0
+huepy==1.2.1
+idna==3.10
+isort==6.0.1
+Jinja2==3.1.6
+livereload==2.7.1
+lxml==5.3.2
+markdown-it-py==3.0.0
+markdown2==2.5.3
+MarkupSafe==3.0.2
+mccabe==0.7.0
+mdurl==0.1.2
+mypy-extensions==1.0.0
+mysqlclient==2.2.7
+npm==0.1.1
+optional-django==0.1.0
+packaging==24.2
+pathspec==0.12.1
+pillow==11.1.0
+platformdirs==4.3.6
+psycopg2==2.9.10
+psycopg2-binary==2.9.10
+pycodestyle==2.12.1
+pydantic==2.11.3
+pydantic_core==2.33.1
+pyflakes==3.2.0
+Pygments==2.19.1
+PyJWT==2.9.0
+pylint==3.3.4
+pylint-django==2.6.1
+pylint-plugin-utils==0.8.2
+pymongo==4.11.1
+PyMySQL==1.1.1
+redis==5.2.1
+requests==2.32.3
+rich==14.0.0
+sniffio==1.3.1
+SQLAlchemy==2.0.40
+sqlparse==0.5.3
+starlette==0.46.1
+tomlkit==0.13.2
+tornado==6.4.2
+typing-inspection==0.4.0
+typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.4.0
+uvicorn==0.34.0
+virtualenv==20.29.2
+vite==1.5.2
+whitenoise==6.9.0
